RESOLVED FIXED41886
Shorten access control failure explanation messages
https://bugs.webkit.org/show_bug.cgi?id=41886
Summary Shorten access control failure explanation messages
Alexey Proskuryakov
Reported 2010-07-08 12:04:54 PDT
There is some mismatch between "header" and "header field", but perhaps neither is needed.
Attachments
proposed patch (38.12 KB, patch)
2010-07-08 12:18 PDT, Alexey Proskuryakov
levin: review+
Alexey Proskuryakov
Comment 1 2010-07-08 12:18:23 PDT
Created attachment 60925 [details] proposed patch
David Levin
Comment 2 2010-07-08 12:28:49 PDT
Comment on attachment 60925 [details] proposed patch > Index: WebCore/ChangeLog > + Removed "response header field" parts from error text - it's long, but doesn't add much My OCD tendency compels me to mention that there is an extra space after "but".
Alexey Proskuryakov
Comment 3 2010-07-08 13:39:01 PDT
> My OCD tendency compels me to mention that there is an extra space after "but". And I hoped to use commit-queue for this :) Committed <http://trac.webkit.org/changeset/62828>.
Note You need to log in before you can comment on or make changes to this bug.